--- a/index.html
+++ b/index.html
@@ -14,22 +14,26 @@
             <i class="fa-brands fa-google"></i>
             <p>google</p>
         </a>-->
-        <form action="cadastro.php" method="post" autocomplete="off" >
-            <div class="formulario">
-                <i class="fa-solid fa-user"></i>
-                <input type="email" name="email" id="iemail" placeholder="E-mail" required>
-                <label for="iemail">E-mail</label>
-            </div>
-            <div class="formulario">
-                <i class="fa-solid fa-lock"></i>
-                <input type="password" name="senha" id="isenha" placeholder="Senha" required>
-                <label for="isenha">Senha</label>
-            </div>
-            <input type="submit" value="LOGIN">
-            <input class="marcar" type="checkbox" name="marcar" id="imarcar">
-            <label for="imarcar">Lembrar-me</label>
-            <a href="#">Esqueci a Senha</a>
-        </form>
+        <div class="formulario-pai">
+            <form action="cadastro.php" method="post" autocomplete="off" >
+                <div class="formulario">
+                    <i class="fa-solid fa-user"></i>
+                    <input type="email" name="email" id="iemail" placeholder="E-mail" required>
+                    <label for="iemail">E-mail</label>
+                </div>
+                <div class="formulario">
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" name="senha" id="isenha" placeholder="Senha" required>
+                    <label for="isenha">Senha</label>
+                </div>
+                <input type="submit" value="LOGIN">
+                <div class="final">
+                    <input class="marcar" type="checkbox" name="marcar" id="imarcar">
+                    <label for="imarcar">Lembrar-me</label>
+                    <a href="#">Esqueci a Senha</a>
+                </div>
+            </form>
+        </div>
     </section>
 </body>
 </html>
