--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main id="principal">
         <section id="container">
                 <h1>Login</h1>
-                <p>Bem vindo de volta!<br> 
+                <p>Bem vindo de volta!
                 Conecte-se a sua conta.</p>
             <section id="redes">
                 <div>
